--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Java2023/Leccion2/CicloWhile/nbproject/private/
 /Java2023/Leccion2/CicloWhile/build/
+/Java2023/Leccion2/EjercicioCiclos01/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos01/build/
+/Java2023/Leccion2/EjercicioCiclos02/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos02/build/
