Commiteamos las clases de Java Ejercicio 7 8 y 9
Los ejercicios son ciclos y clase Scanner y JOptionPane

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@
 /Java2023/Leccion2/EjercicioCiclos01/build/
 /Java2023/Leccion2/EjercicioCiclos02/nbproject/private/
 /Java2023/Leccion2/EjercicioCiclos02/build/
+/Java2023/Leccion3/LeccionClasesObjetos/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos03/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos03/build/
+/Java2023/Leccion2/EjercicioCiclos04/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos04/build/
+/Java2023/Leccion2/EjercicioCiclos05/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos05/build/
+/Java2023/Leccion3/LeccionClasesObjetos/build/
+/Java2023/Leccion2/EjercicioCiclos06/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos06/build/
+/Java2023/Leccion4/Aritmetica/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos07/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos07/build/
+/Java2023/Leccion4/Aritmetica/build/
+/Java2023/Leccion2/EjercicioCiclos08/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos08/build/
+/Java2023/Leccion2/EjercicioCiclos09/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos09/build/
