Commit de Java Clase 7 en POO
Encapsulamiento, clases y objetos

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 /Java2023/Leccion2/EjercicioCiclos08/build/
 /Java2023/Leccion2/EjercicioCiclos09/nbproject/private/
 /Java2023/Leccion2/EjercicioCiclos09/build/
+/Java2023/Leccion2/EjerciciosCiclos10/nbproject/private/
+/Java2023/Leccion2/EjerciciosCiclos10/build/
+/Java2023/Leccion2/EjercicioCiclos11/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos11/build/
+/Java2023/Leccion2/EjercicioCiclos12/nbproject/private/
+/Java2023/Leccion2/EjercicioCiclos12/build/
+/Java2023/Leccion5/Encapsulamiento/nbproject/private/
