" Clase correspondiente a Java, Clase 8
Clase 8 de Java

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /Java2023/Leccion2/EjercicioCiclos12/nbproject/private/
 /Java2023/Leccion2/EjercicioCiclos12/build/
 /Java2023/Leccion5/Encapsulamiento/nbproject/private/
+/Java2023/Leccion5/Encapsulamiento/build/
+/Java2023/Leccion5/ContextoEstatico/nbproject/private/
+/Java2023/Leccion5/ContextoEstatico/build/
