Clase 9 de Java con herencia
Clase-9-java

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /Java2023/Leccion5/Encapsulamiento/build/
 /Java2023/Leccion5/ContextoEstatico/nbproject/private/
 /Java2023/Leccion5/ContextoEstatico/build/
+/Java2023/Leccion6/Herencia/nbproject/private/
+/Java2023/Leccion6/Herencia/build/
