Clase 10 POO Sobrecarga de constructores y metodos
Clase-10_Java

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@
 /Java2023/Leccion5/ContextoEstatico/build/
 /Java2023/Leccion6/Herencia/nbproject/private/
 /Java2023/Leccion6/Herencia/build/
+/Java2023/Leccion7/SobrecargaMetodos/nbproject/private/
+/Java2023/Leccion7/SobrecargaMetodos/build/
+/Java2023/Leccion7/Paquetes/nbproject/private/
+/Java2023/Leccion7/Paquetes/build/
+/Java2023/Leccion8/PalabraFinal/nbproject/private/
+/Java2023/Leccion8/PalabraFinal/build/
