--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@
 /Java2023/Leccion7/Paquetes/build/
 /Java2023/Leccion8/PalabraFinal/nbproject/private/
 /Java2023/Leccion8/PalabraFinal/build/
+/Java2023/Leccion9/Arreglos/nbproject/private/
+/Java2023/Leccion9/Arreglos/build/
+/Java2023/Leccion9/Arreglos_Ejercicio_1/nbproject/private/
+/Java2023/Leccion9/Arreglos_Ejercicio_1/build/
+/Java2023/Leccion9/Arreglos_Ejercicio_2/nbproject/private/
+/Java2023/Leccion9/Arreglos_Ejercicio_2/build/
+/Java2023/Leccion9/Arreglos_Ejercicio_3/nbproject/private/
+/Java2023/Leccion9/Arreglos_Ejercicio_3/build/
